# cmake_study

./: .gitignore  readme.md  rerun.sh
Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step1_build/: Tutorial  TutorialConfig.h
Step2/: TutorialConfig.h.in  tutorial.cxx
Step3/: CMakeLists.txt
Step3/MathFunctions/: CMakeLists.txt
Step3_build/: Tutorial
Step4/: CMakeLists.txt  TutorialConfig.h  tutorial.cxx
Step4/MathFunctions/: CMakeLists.txt
Step4_build/: DartConfiguration.tcl  Tutorial
